# ustring

./: .gitignore  Doxyfile  LICENSE.md  Makefile  README.md  meson.build
doc/: .gitignore
example/: str_example.c
include/: str.h  str_list.h
include/ustring/: errcode.h  str.h  str_list.h
src/: meson.build  str.c  str_list.c  str_list_p.h  str_p.h
test/: Makefile  meson.build  str_list_test.c  str_test.c  test_env.h
